fix list item out of bounds #35

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -212,6 +212,7 @@
 
 .profileDescription {
   margin-top: 5px;
+  overflow-wrap: anywhere;
 }
 
 .userCard img {
